syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.plusls.llsmanager.grpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package grpc;

// The greeting service definition.
service LlsManager {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}